Added users model, controller and route
