# models/Post.js
@@ -1,13 +1,18 @@
 const mongoose = require("mongoose");
+const Schema = mongoose.Schema;
 
 const PostSchema = new mongoose.Schema({
+
+    user_id: {
+        type: Schema.Types.ObjectId,
+        ref: "User",
+        required: true
+    },
 
     text: String,
     image: String,
     date: String,
     number_of_likes: Number,
-    user_name: String,
-    user_avatar: String
 
 }, {timestamps: true});
 
